CGI: Add support for query string for GET